🚀 Production deployment ready
- Update production environment variables with real Supabase credentials
- Add comprehensive Vercel deployment configuration
- Include one-click deploy button and detailed setup instructions
- Optimize for Japanese region (nrt1) with 30s function timeout
- Ready for immediate production deployment

Environment configured:
✅ Supabase database connection
✅ Authentication secrets
✅ Production domain settings
✅ Security headers
✅ Performance optimizations

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,24 @@
   "framework": "nextjs",
   "installCommand": "npm install",
   "regions": ["nrt1"],
-  "env": {
-    "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
-    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key"
-  }
+  "functions": {
+    "app/**/*": {
+      "maxDuration": 30
+    }
+  },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
+    }
+  ]
 }
