Fix deployment: Remove invalid region selector and optimize Vercel config
- Remove invalid 'nrt1' region selector causing deployment error
- Optimize function configuration for app routes and API endpoints
- Add additional security headers for production
- Ready for immediate Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "npm install",
-  "regions": ["nrt1"],
   "functions": {
-    "app/**/*": {
+    "app/**/*.tsx": {
+      "maxDuration": 30
+    },
+    "app/api/**/*.ts": {
       "maxDuration": 30
     }
   },
@@ -20,6 +19,10 @@
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "origin-when-cross-origin"
         }
       ]
     }
